fix search btn z-index

--- a/front/src/components/shared/filter/Filter.css
+++ b/front/src/components/shared/filter/Filter.css
@@ -12,4 +12,5 @@
     background-color: var(--color-8);
     border: 1px solid var(--color-8);
     color: var(--main-text-color);
+    z-index: 0 !important;
 }
